--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,16 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "click==8.1.7",
+    "dash==2.17.1",
+    "flask==3.0.3",
+    "ipython>=9.6.0",
+    "itsdangerous==2.2.0",
+    "jinja2==3.1.4",
+    "markupsafe==2.1.5",
+    "pandas==2.1.3",
+    "plotly==5.17.0",
+    "waitress==3.0.0",
+    "werkzeug==3.0.4",
+]
