--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 click==8.1.7
 Flask==3.0.3
-gunicorn==23.0.0
+waitress==3.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 Werkzeug==3.0.4
+dash==2.17.1
+plotly==5.17.0
+pandas==2.1.3
